--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F8F9FA"
+    android:fitsSystemWindows="true"
     tools:context=".MainActivity">
 
     <androidx.appcompat.widget.Toolbar
@@ -42,10 +43,10 @@
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottom_navigation"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="4dp"
             app:elevation="0dp"
+            android:paddingRight="5dp"
             android:background="@android:color/transparent"
             android:layout_marginEnd="12dp"
             app:menu="@menu/bottom_nav_menu"/>
@@ -54,11 +55,11 @@
     </com.google.android.material.bottomappbar.BottomAppBar>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:backgroundTint="#5B9EE1"
         android:src="@drawable/cart"
-        android:layout_marginBottom="10dp"
         app:layout_anchorGravity="bottom|center"
         app:layout_anchor="@id/bottomAppBar"/>
 
