--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F8F9FA"
     tools:context=".Screens.ProductDetailActivity">
 
     <!-- Toolbar -->
@@ -12,18 +13,19 @@
         android:id="@+id/detailToolbar"
         android:layout_width="0dp"
         android:layout_height="?attr/actionBarSize"
-        android:background="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
     <ImageView
-        android:id="@+id/ivProductDetailImage"
+        android:id="@+id/ivPDImage"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         android:scaleType="centerCrop"
-        app:layout_constraintDimensionRatio="16:9"
+        app:layout_constraintDimensionRatio="17:14"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/detailToolbar"
@@ -34,12 +36,10 @@
         android:layout_height="0dp"
         android:background="@drawable/custom_product_detail"
         android:orientation="vertical"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ivProductDetailImage">
+        app:layout_constraintTop_toBottomOf="@+id/ivPDImage">
 
         <TextView
             android:id="@+id/txtPDBestSeller"
@@ -47,16 +47,19 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="Best Seller"
+            android:paddingLeft="20dp"
             android:textColor="#5B9EE1"
-            android:textSize="14dp" />
+            android:textSize="16dp" />
 
         <TextView
             android:id="@+id/tvPDName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
-            android:text="Nike Air Max"
-            android:textSize="20sp"
+            android:layout_marginBottom="4dp"
+            android:text="Nike Jordan"
+            android:paddingLeft="20dp"
+            android:textColor="@color/black"
+            android:textSize="24dp"
             android:textStyle="bold" />
 
         <TextView
@@ -65,7 +68,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="6dp"
             android:text="$967.800"
-            android:textSize="20sp"
+            android:paddingLeft="20dp"
+            android:textColor="@color/black"
+            android:textSize="20dp"
             android:textStyle="bold" />
 
         <TextView
@@ -75,22 +80,25 @@
             android:layout_marginTop="6dp"
             android:text="Air Jordan is an American brand of basketball shoes athletic, casual, and style clothing produced by Nike...."
             android:textColor="#666666"
-            android:textSize="14sp" />
+            android:paddingLeft="20dp"
+            android:textSize="16dp" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="Gallery"
+            android:paddingLeft="20dp"
+            android:layout_marginBottom="16dp"
             android:textSize="20sp"
             android:textStyle="bold" />
 
         <LinearLayout
+            android:paddingLeft="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <ImageView
-                android:id="@+id/ivPRImage1"
                 android:layout_width="56dp"
                 android:layout_height="56dp"
                 android:layout_marginRight="16dp"
@@ -98,7 +106,6 @@
                 android:src="@drawable/img_1" />
 
             <ImageView
-                android:id="@+id/ivPRImage2"
                 android:layout_width="56dp"
                 android:layout_height="56dp"
                 android:layout_marginRight="16dp"
@@ -106,7 +113,6 @@
                 android:src="@drawable/img_1" />
 
             <ImageView
-                android:id="@+id/ivPRImage3"
                 android:layout_width="56dp"
                 android:layout_height="56dp"
                 android:background="@drawable/custom_image"
@@ -116,6 +122,9 @@
         <include
             android:id="@+id/size"
             layout="@layout/include_size"
+            android:layout_marginTop="16dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
@@ -124,6 +133,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:gravity="center"
+            android:paddingLeft="20dp"
             android:orientation="horizontal">
 
             <TextView
@@ -146,7 +156,7 @@
                 android:background="@drawable/custom_text_size"
                 android:gravity="center"
                 android:padding="8dp"
-                android:text="38"
+                android:text="39"
                 android:textSize="20sp" />
 
             <TextView
@@ -157,7 +167,7 @@
                 android:background="@drawable/custom_text_size"
                 android:gravity="center"
                 android:padding="8dp"
-                android:text="38"
+                android:text="40"
                 android:textSize="20sp" />
 
             <TextView
@@ -168,7 +178,7 @@
                 android:background="@drawable/custom_text_size"
                 android:gravity="center"
                 android:padding="8dp"
-                android:text="38"
+                android:text="41"
                 android:textSize="20sp" />
 
             <TextView
@@ -179,7 +189,7 @@
                 android:background="@drawable/custom_text_size"
                 android:gravity="center"
                 android:padding="8dp"
-                android:text="38"
+                android:text="42"
                 android:textSize="20sp" />
 
             <TextView
@@ -189,23 +199,29 @@
                 android:background="@drawable/custom_text_size"
                 android:gravity="center"
                 android:padding="8dp"
-                android:text="38"
+                android:text="43"
                 android:textSize="20sp" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:background="@drawable/custom_detail_addtocart"
             android:gravity="center"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:paddingRight="20dp">
 
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:gravity="center"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:orientation="vertical">
+                android:layout_gravity="center"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="10dp"
+                android:orientation="vertical"
+                android:paddingLeft="20dp">
 
                 <TextView
                     android:layout_width="match_parent"
@@ -213,12 +229,12 @@
                     android:layout_marginTop="16dp"
                     android:text="Price"
                     android:textColor="#5B9EE1"
-                    android:textSize="14dp" />
+                    android:textSize="16dp" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="6dp"
+                    android:paddingBottom="6dp"
                     android:text="$967.800"
                     android:textSize="20sp"
                     android:textStyle="bold" />
@@ -226,14 +242,16 @@
             </LinearLayout>
 
             <Button
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:background="@drawable/custom_buttom_addtocart"
-                android:textColor="@color/white"
-                android:textStyle="bold"
                 android:padding="16dp"
+                android:paddingTop="16dp"
                 android:stateListAnimator="@null"
-                android:text="Add To Cart" />
+                android:text="Add To Cart"
+                android:textColor="@color/white"
+                android:textStyle="bold" />
 
 
         </LinearLayout>
