--- a/app/src/main/res/layout/activity_my_cart.xml
+++ b/app/src/main/res/layout/activity_my_cart.xml
@@ -17,7 +17,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerCart"
+        android:id="@+id/recyclerViewMyCart"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
