--- a/app/src/main/res/layout/item_mycart.xml
+++ b/app/src/main/res/layout/item_mycart.xml
@@ -17,18 +17,21 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
+            android:id="@+id/imgCartProduct"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:layout_marginRight=""
+            android:layout_marginRight="16dp"
             android:background="@drawable/custom_product_detail"
             android:src="@drawable/img_7" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/txtCartProductName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Nike Club Max"
@@ -37,8 +40,10 @@
                 android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/txtCartProductPrice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
                 android:text="$1250.00"
                 android:textColor="@color/black"
                 android:textSize="18dp"
@@ -47,6 +52,7 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
                 android:orientation="horizontal">
 
                 <ImageView
@@ -56,6 +62,7 @@
                     android:src="@drawable/img_4" />
 
                 <TextView
+                    android:id="@+id/txtCartProductQuantity"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="16dp"
@@ -80,23 +87,26 @@
 
         <LinearLayout
             android:layout_width="wrap_content"
-
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="end"
+            android:gravity="center_horizontal"
             android:orientation="vertical">
 
             <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="1"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
-                android:text="1"
+                android:text="40"
                 android:textColor="@color/black"
                 android:textSize="18dp"
                 android:textStyle="bold" />
 
             <ImageView
                 android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:layout_height="0dp"
+                android:layout_weight="1"
                 android:backgroundTint="@null"
                 android:src="@drawable/img_6" />
 
