--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -51,7 +51,7 @@
         android:layout_height="100dp"
         android:src="@drawable/ic_logo"
         android:scaleType="centerCrop"
-        app:shapeAppearanceOverlay="@style/CircleImageView"
+        app:shapeAppearanceOverlay="@style/Base.CardView"
         app:layout_constraintTop_toBottomOf="@+id/tvProfile"
         app:layout_constraintTop_margin="32dp"
         app:layout_constraintStart_toStartOf="parent"
