--- a/app/src/main/res/drawable/bg_edittext.xml
+++ b/app/src/main/res/drawable/bg_edittext.xml
@@ -1,4 +1,4 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <solid android:color="#FFFFFF"/> <!-- Màu nền trắng -->
-    <corners android:radius="24dp"/> <!-- Bo góc -->
+    <solid android:color="#FFFFFF"/>
+    <corners android:radius="24dp"/>
 </shape>
