--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -12,6 +12,7 @@
         android:id="@+id/btnBack"
         android:layout_width="20dp"
         android:layout_height="20dp"
+        android:layout_marginEnd="12dp"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:src="@drawable/ic_back"
         android:contentDescription="Back"
@@ -23,6 +24,7 @@
         android:id="@+id/btnEdit"
         android:layout_width="36dp"
         android:layout_height="36dp"
+        android:layout_marginEnd="12dp"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:src="@drawable/ic_edit"
         android:contentDescription="Edit"
