--- a/app/src/main/res/layout/item_search.xml
+++ b/app/src/main/res/layout/item_search.xml
@@ -3,21 +3,24 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:paddingVertical="12dp"
-    android:paddingHorizontal="8dp">
+    android:padding="12dp"
+    android:gravity="center_vertical">
 
     <ImageView
-        android:id="@+id/ivClock"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
+        android:id="@+id/ivIcon"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
         android:layout_marginEnd="12dp"
-        android:src="@drawable/ic_back" />
+        android:src="@drawable/ic_history"
+        android:contentDescription="History Icon" />
 
     <TextView
-        android:id="@+id/tvSearchItem"
-        android:layout_width="wrap_content"
+        android:id="@+id/tvText"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Item Name"
-        android:textSize="14sp"
-        android:textColor="#000"/>
+        android:layout_weight="1"
+        android:text="Search item"
+        android:textSize="16sp"
+        android:textColor="#000000" />
+
 </LinearLayout>
