--- a/app/src/main/res/layout/item_favorite.xml
+++ b/app/src/main/res/layout/item_favorite.xml
@@ -1,94 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_marginRight="20dp"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    card_view:cardCornerRadius="16dp"
+    card_view:cardElevation="4dp"
+    android:layout_margin="8dp">
 
-    <LinearLayout
-        android:id="@+id/linearLayout1"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/custom_product"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:padding="12dp">
 
+        <!-- Product Image -->
         <ImageView
-            android:id="@+id/imgProduct"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_gravity="center"
-            android:layout_marginLeft="12dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginBottom="4dp"
-            app:srcCompat="@drawable/img" />
-
-        <TextView
-            android:id="@+id/txtBestSeller"
+            android:id="@+id/ivProduct"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="12dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginBottom="4dp"
-            android:text="Best Seller"
-            android:textColor="#5B9EE1"
-            android:textSize="14dp" />
+            android:layout_height="140dp"
+            android:scaleType="fitCenter"
+            android:layout_centerHorizontal="true" />
 
+        <!-- Heart icon on top-left -->
+        <ImageView
+            android:id="@+id/ivFavorite"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_alignTop="@id/ivProduct"
+            android:layout_alignStart="@id/ivProduct"
+            android:layout_margin="8dp"
+            android:src="@drawable/ic_heart_outline" />
+
+        <!-- Tag -->
         <TextView
-            android:id="@+id/txtProductName"
-            android:layout_width="match_parent"
+            android:id="@+id/tvTag"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="12dp"
-            android:layout_marginBottom="4dp"
+            android:text="BEST SELLER"
+            android:textColor="#007bff"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            android:layout_below="@id/ivProduct"
+            android:layout_marginTop="8dp" />
+
+        <!-- Name -->
+        <TextView
+            android:id="@+id/tvName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="Nike Jordan"
-            android:textColor="@color/black"
-            android:textSize="18dp"
-            android:textStyle="bold" />
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:layout_below="@id/tvTag"
+            android:layout_marginTop="4dp" />
 
-        <LinearLayout
-            android:id="@+id/linearLayout2"
-            android:layout_width="match_parent"
+        <!-- Price -->
+        <TextView
+            android:id="@+id/tvPrice"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/txtPrice"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="12dp"
-                android:layout_marginRight="4dp"
-                android:layout_marginBottom="4dp"
-                android:layout_weight="1"
-                android:text="$493.00"
-                android:textColor="@color/black"
-                android:textSize="18dp"
-                android:textStyle="bold" />
-
-            <ImageButton
-                android:id="@+id/btnAdd"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:background="@drawable/add_background"
-                android:src="@drawable/ic_add" />
-        </LinearLayout>
-    </LinearLayout>
-
-    <!-- Trái tim yêu thích nằm ở góc trên bên phải -->
-    <ImageView
-        android:id="@+id/heartIcon"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="12dp"
-        android:src="@drawable/ic_heart_filled_red"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:clickable="true"
-        android:focusable="true" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+            android:text="$58.7"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            android:layout_below="@id/tvName"
+            android:layout_marginTop="4dp" />
+    </RelativeLayout>
+</androidx.cardview.widget.CardView>
