--- a/app/src/main/res/layout/activity_see_all_shoes.xml
+++ b/app/src/main/res/layout/activity_see_all_shoes.xml
@@ -11,18 +11,19 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:orientation="horizontal"
         android:gravity="center_vertical"
         android:layout_marginBottom="8dp">
 
         <ImageButton
             android:id="@+id/btnBack"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="?attr/selectableItemBackgroundBorderless"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_alignParentStart="true"
+            android:background="@android:color/transparent"
             android:src="@drawable/ic_back"
-            android:contentDescription="Back"
-            app:tint="#000" />
+            android:contentDescription="Back" />
 
         <TextView
             android:text="All Shoes"
