khanh them New Arrivals

--- a/app/src/main/res/layout/item_product_new_arrivals.xml
+++ b/app/src/main/res/layout/item_product_new_arrivals.xml
@@ -1,68 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_gravity="center"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:padding="12dp"
+    android:layout_margin="10dp"
+    android:background="@drawable/custom_product">
 
-
+    <!-- Container thông tin sản phẩm bên trái -->
     <LinearLayout
-        android:layout_width="match_parent"
+        android:id="@+id/infoContainer"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:background="@drawable/custom_product"
-        app:layout_constraintTop_toTopOf="parent">
 
-        <LinearLayout
-            android:layout_width="163dp"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginRight="9dp"
-            android:layout_marginBottom="20dp"
-            android:orientation="vertical">
+        android:orientation="vertical"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/imgProductNew"
+        android:layout_marginEnd="12dp">
 
-            <TextView
-                android:id="@+id/txtBestChoice"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:layout_marginBottom="4dp"
-                android:text="Best Choice"
-                android:textColor="#5B9EE1"
-                android:textSize="14dp" />
-
-            <TextView
-                android:id="@+id/txtProductNewName"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:text="Nike Air Jordan"
-                android:textColor="@color/black"
-                android:textSize="20dp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/txtProductNewPrice"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
-                android:text="$493.00"
-                android:textColor="@color/black"
-                android:textSize="18dp"
-                android:textStyle="bold" />
-
-        </LinearLayout>
-
-        <ImageView
-            android:id="@+id/imgProductNew"
+        <TextView
+            android:id="@+id/txtBestChoice"
             android:layout_width="wrap_content"
-            android:layout_height="121dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="20dp"
-            app:srcCompat="@drawable/img_1" />
+            android:layout_height="wrap_content"
+            android:text="Best Choice"
+            android:textColor="#5B9EE1"
+            android:textSize="14sp" />
+
+        <TextView
+            android:id="@+id/txtProductNewName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Nike Air Jordan"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:layout_marginTop="4dp"/>
+
+        <TextView
+            android:id="@+id/txtProductNewPrice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="$493.00"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:layout_marginTop="8dp"/>
     </LinearLayout>
+
+    <!-- Hình ảnh bên phải -->
+    <ImageView
+        android:id="@+id/imgProductNew"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:scaleType="centerCrop"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="8dp"
+        app:srcCompat="@drawable/img_1" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
