--- a/app/src/main/res/layout/newarrivals_seeall.xml
+++ b/app/src/main/res/layout/newarrivals_seeall.xml
@@ -28,7 +28,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/txtSeeAll"
+            android:id="@+id/txtSeeAll1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="See all"
