--- a/app/src/main/res/layout/item_mycart.xml
+++ b/app/src/main/res/layout/item_mycart.xml
@@ -25,23 +25,26 @@
             android:src="@drawable/img_7" />
 
         <LinearLayout
-            android:layout_width="0dp"
+            android:layout_width="100dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/txtCartProductName"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Nike Club Max"
                 android:textColor="@color/black"
                 android:textSize="18dp"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:singleLine="true"
                 android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/txtCartProductPrice"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
                 android:text="$1250.00"
@@ -104,7 +107,7 @@
                 android:textStyle="bold" />
 
             <ImageView
-                android:layout_width="30dp"
+                android:layout_width="20dp"
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:backgroundTint="@null"
