--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -112,7 +112,9 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerViewVariantColor"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:scrollbars="none"/>
         </LinearLayout>
 
         <include
