--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -17,5 +17,9 @@
         android:id="@+id/profileFragment"
         android:icon="@drawable/ic_profile"
         android:title=""/>
+    <item
+        android:id="@+id/accountAndSettingFragment"
+        android:icon="@drawable/ic_edit"
+        android:title=""/>
 
 </menu>
