--- a/app/src/main/res/layout/account_settings.xml
+++ b/app/src/main/res/layout/account_settings.xml
@@ -3,37 +3,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
+    android:layout_marginTop="90px"
+    android:layout_marginBottom="110px"
     android:background="#F9F9F9">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-        <!-- Header với nút back và tiêu đề -->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_vertical"
-            android:paddingBottom="24dp">
-
-            <ImageButton
-                android:id="@+id/btnBack"
-                android:layout_width="36dp"
-                android:layout_height="36dp"
-                android:background="@null"
-                android:src="@drawable/ic_back"
-                android:contentDescription="Back" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Account and Settings"
-                android:textStyle="bold"
-                android:textSize="18sp"
-                android:layout_marginStart="12dp"
-                android:textColor="#212121" />
-        </LinearLayout>
 
 
         <!-- Title -->
