--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -5,16 +5,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F8F9FB"
+    android:layout_marginTop="90px"
+    android:layout_marginBottom="110px"
     android:padding="16dp">
 
     <!-- Nút quay lại -->
     <ImageButton
         android:id="@+id/btnBack"
+        android:visibility="gone"
         android:layout_width="20dp"
         android:layout_height="20dp"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        android:src="@drawable/ic_back"
-        android:contentDescription="Back"
+        android:src="@drawable/baseline_arrow_back_ios_new_24"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
 
